--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,12 @@ services:
     ports:
       - 6379:6379
       - 8001:8001
+    volumes:
+      - redis-data:/data
+    environment:
+      REDIS_ARGS: --save 60 1
+volumes:
+  redis-data:
 #  mongo:
 #    image: mongo
 ##    restart: always
