--- a/services/telegram-bot/package.json
+++ b/services/telegram-bot/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.5",
     "telegraf": "^4.11.2",
     "vin-decoder": "^1.2.0"
   }
