--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,14 @@ services:
       AUTOINS_HOST: http://autoins:8100
       GIBDD_HOST: http://gibdd:8090
       REDIS_HOST: redis://redis:6379
+  telegram-bot:
+    build:
+      context: services/telegram-bot/
+    image: itlaboratory/what-a-car-telegram-bot
+    restart: on-failure
+    environment:
+      TELEGRAM_BOT_TOKEN: 5973381833:AAGEiHa7g_Of537W6j1ZkSL_2MiTZhPO4JU
+      WHAT_A_CAR_API_HOST: http://api:3000
   sravni:
     build:
       context: services/sravni/
