--- a/services/telegram-bot/package.json
+++ b/services/telegram-bot/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.5",
-    "telegraf": "^4.11.2",
-    "vin-decoder": "^1.2.0"
+    "telegraf": "^4.11.2"
   }
 }
