--- a/services/telegram-bot/package.json
+++ b/services/telegram-bot/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.5",
+    "redis": "^4.6.3",
     "telegraf": "^4.11.2"
   }
 }
