--- a/services/telegram-bot/package.json
+++ b/services/telegram-bot/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "redis": "^4.6.3",
+    "ioredis": "^5.3.0",
     "telegraf": "^4.11.2"
   }
 }
