--- a/services/sravni/package.json
+++ b/services/sravni/package.json
@@ -11,12 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.12.0",
-    "install": "^0.13.0",
+    "ioredis": "^5.3.0",
     "npm": "^9.1.2",
     "puppeteer": "^19.3.0",
     "puppeteer-autoscroll-down": "^1.1.1",
     "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-anonymize-ua": "^2.4.4",
     "puppeteer-extra-plugin-session": "^1.0.1",
     "puppeteer-extra-plugin-stealth": "^2.11.1"
   }
