--- a/services/autoins/package.json
+++ b/services/autoins/package.json
@@ -11,8 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.12.0",
-    "install": "^0.13.0",
+    "ioredis": "^5.3.0",
     "npm": "^9.1.2",
     "puppeteer": "^19.3.0",
     "puppeteer-autoscroll-down": "^1.1.1",
