--- a/services/gibdd/package.json
+++ b/services/gibdd/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.3",
-    "fastify": "^4.11.0",
-    "user-agents": "^1.0.1264"
+    "axios": "^1.3.0",
+    "ioredis": "^5.3.0",
+    "user-agents": "^1.0.1278"
   }
 }
