--- a/services/storage/package.json
+++ b/services/storage/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^4.13.0",
-    "redis": "^4.5.1"
+    "ioredis": "^5.3.0",
+    "mongodb": "^4.13.0"
   }
 }
