--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     build:
       context: services/autoins/
     image: itlaboratory/what-a-car-autoins
-    restart: on-failure
+#    restart: on-failure
     environment:
       REDIS_HOST: redis://redis:6379
   gibdd-captcha-solver:
