--- a/services/autoins/package.json
+++ b/services/autoins/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.2",
+    "cheerio": "^1.0.0-rc.12",
     "ioredis": "^5.3.0",
     "npm": "^9.1.2",
     "puppeteer": "^19.3.0",
