--- a/services/autoins/package.json
+++ b/services/autoins/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.2",
     "cheerio": "^1.0.0-rc.12",
     "ioredis": "^5.3.0",
+    "moment": "^2.29.4",
     "npm": "^9.1.2",
     "puppeteer": "^19.3.0",
     "puppeteer-autoscroll-down": "^1.1.1",
