--- a/services/ingos/package.json
+++ b/services/ingos/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sravni",
+  "name": "autoins",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,8 +15,6 @@
     "npm": "^9.1.2",
     "puppeteer": "^19.3.0",
     "puppeteer-extra": "^3.3.4",
-    "puppeteer-extra-plugin-anonymize-ua": "^2.4.4",
-    "puppeteer-extra-plugin-session": "^1.0.1",
     "puppeteer-extra-plugin-stealth": "^2.11.1"
   }
 }
