--- a/services/autoins/package.json
+++ b/services/autoins/package.json
@@ -18,6 +18,7 @@
     "npm": "^9.1.2",
     "puppeteer": "^19.3.0",
     "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-anonymize-ua": "^2.4.4",
     "puppeteer-extra-plugin-stealth": "^2.11.1"
   }
 }
