--- a/services/gibdd/package.json
+++ b/services/gibdd/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.0",
+    "axios": "^1.3.2",
     "ioredis": "^5.3.0",
+    "socks-proxy-agent": "^7.0.0",
     "user-agents": "^1.0.1278"
   }
 }
