--- a/services/gibdd-captcha-solver/Dockerfile
+++ b/services/gibdd-captcha-solver/Dockerfile
@@ -5,4 +5,5 @@ COPY ./requirements.txt .
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 COPY ./*.py ./
 COPY ./numeric_captcha_model.hdf5 .
-CMD uvicorn main:app --host 0.0.0.0 --port 8080
+# CMD uvicorn main:app --host 0.0.0.0 --port 8080
+CMD python main.py
