--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,38 +143,38 @@ services:
     environment:
       REDIS_HOST: redis://redis:6379
       REDIS_EXPIRATION_SEC: 604800
-#  storage:
-#    build:
-#      context: services/storage/
-#    image: itlaboratory/what-a-car-storage
-#    restart: on-failure
-#    depends_on:
-#      - mongo
-#      - redis
-#    environment:
-#      REDIS_HOST: redis://redis:6379
-#      MONGO_HOST: mongodb://root:root@mongo:27017
-#  mongo:
-#    image: mongo
-#    restart: on-failure
-#    ports:
-#      - 27017:27017
-#    volumes:
-#      - mongo-data:/data
-#    environment:
-#      MONGO_INITDB_ROOT_USERNAME: root
-#      MONGO_INITDB_ROOT_PASSWORD: root
-#  mongo-express:
-#    image: mongo-express
-#    restart: on-failure
-#    ports:
-#      - 8081:8081
-#    depends_on:
-#      - mongo
-#    environment:
-#      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-#      ME_CONFIG_MONGODB_ADMINPASSWORD: root
-#      ME_CONFIG_MONGODB_URL: mongodb://root:root@mongo:27017/
+  storage:
+    build:
+      context: services/storage/
+    image: itlaboratory/what-a-car-storage
+    restart: on-failure
+    depends_on:
+      - mongo
+      - redis
+    environment:
+      REDIS_HOST: redis://redis:6379
+      MONGO_HOST: mongodb://root:root@mongo:27017
+  mongo:
+    image: mongo
+    restart: on-failure
+    ports:
+      - 27017:27017
+    volumes:
+      - mongo-data:/data
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+  mongo-express:
+    image: mongo-express
+    restart: on-failure
+    ports:
+      - 8081:8081
+    depends_on:
+      - mongo
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+      ME_CONFIG_MONGODB_URL: mongodb://root:root@mongo:27017/
 volumes:
   redis-data:
   mongo-data:
