--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
     environment:
       REDIS_HOST: redis://redis:6379
       REDIS_EXPIRATION_SEC: 604800
+      NAVIGATION_TIMEOUT_MS: 90000
+      ATTEMPTS: 1
     deploy:
       mode: replicated
       replicas: 2
