--- a/services/autoins/package.json
+++ b/services/autoins/package.json
@@ -19,6 +19,7 @@
     "puppeteer": "^19.3.0",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-anonymize-ua": "^2.4.4",
-    "puppeteer-extra-plugin-stealth": "^2.11.1"
+    "puppeteer-extra-plugin-stealth": "^2.11.1",
+    "socks-proxy-agent": "^7.0.0"
   }
 }
